+++ version 1.0-alpha4
* gadu: #2730 implemented: image sending is done using new version of protocol (Vogel)
* gadu: #2728 fixed: replace code for registering account/password reminding with WWW calls (Vogel)
* gadu: require libgadu 1.12.x (Vogel)
* sms: #2675 fixed: new code for T-Mobile gateway (Vogel)

+++ version 1.0-alpha3
* gadu: #2710 fixed: sending images works again (Vogel)
* message: #2717 fixed: invalid < and > handling (Vogel)
* plugin: #2706 fixed: smarter loading and unloading plugins (Vogel)

+++ version 1.0-alpha2
* gui: #2621 fixed: lots of Ungroupped tabs could appear in Group Tab Bar (Vogel)
* chat: #2696 fixed: do not open chat window when message is sent for Gadu-Gadu multilogon (Vogel)
* gui: #2678 fixed: remove new line characters from window title (Vogel)
* imagelink: #2676 fixed: improve image links recognition (Vogel)
* hints: #2677 fixed: allow wrapping text inside tool tip (Vogel)
* history: #2681 fixed: allow to maximize history windows on all Window Managers (Vogel)
* tabs: #2646 fixed: content of conversation disappears after detaching tab (Vogel)
* gadu: #2668, #2709 fixed: roster synchronization problems (Vogel)

+++ version 1.0-alpha1
* core: #2058 fixed: avoid notifications flood on connection error (Juzef, beevvy)
* gui: do not scale up avatars smaller than 32x32 on buddy list (beevvy)
* gui: square, rounded avatars on buddy list (Juzef)
* gui: #2622 fixed: ignoring buddies in buddy options window and using menu option (Juzef)
* gui: #1726 fixed: silent mode disables chat window auto-opening (Juzef)
* gui: #2553 done: new tray icon's tooltip (ultr)
* gui: #2552 done: display description in status button's tooltip (ultr)
* core: #2623 fixed: silent mode while DnD checks status of proper account, not default one (Juzef)
* core: #2652 fixed: StatusMenu correctly updated after account is disconnected (Juzef)
* sms: #2662 fixed: updated check of successful response after sending SMS to Orange network (Juzef)