@@ -29,7 +29,7 @@
 #include "sql-contacts-mapping.h"
 
 SqlContactsMapping::SqlContactsMapping(const QSqlDatabase &database, SqlAccountsMapping *accountsMapping, QObject *parent) :
-		QObject(parent), Database(database), AccountsMapping(accountsMapping)
+		QObject(parent), Database(database), Mutex(QMutex::Recursive), AccountsMapping(accountsMapping)
 {
 	Q_ASSERT(AccountsMapping);
 
@@ -44,6 +44,8 @@ SqlContactsMapping::~SqlContactsMapping()
 
 void SqlContactsMapping::contactUpdated(const Contact &contact)
 {
+	QMutexLocker locker(&Mutex);
+
 	int id = idByContact(contact, false);
 	// not all contacts are mapped
 	if (id <= 0)
@@ -59,12 +61,16 @@ void SqlContactsMapping::contactUpdated(const Contact &contact)
 
 void SqlContactsMapping::addMapping(int id, const Contact &contact)
 {
+	QMutexLocker locker(&Mutex);
+
 	contact.addProperty("sql_history:id", id, CustomProperties::NonStorable);
 	ContactMapping.insert(id, contact);
 }
 
 void SqlContactsMapping::loadMappingsFromDatabase()
 {
+	QMutexLocker locker(&Mutex);
+
 	QSqlQuery query(Database);
 	query.prepare("SELECT id, account_id, contact FROM kadu_contacts");
 
@@ -90,6 +96,8 @@ void SqlContactsMapping::loadMappingsFromDatabase()
 
 Contact SqlContactsMapping::contactById(int sqlId) const
 {
+	QMutexLocker locker(&Mutex);
+
 	if (ContactMapping.contains(sqlId))
 		return ContactMapping.value(sqlId);
 	else
@@ -98,6 +106,8 @@ Contact SqlContactsMapping::contactById(int sqlId) const
 
 int SqlContactsMapping::idByContact(const Contact &contact, bool create)
 {
+	QMutexLocker locker(&Mutex);
+
 	int id = contact.property("sql_history:id", 0).toInt();
 	if (!create || id > 0)
 		return id;
@@ -116,6 +126,8 @@ int SqlContactsMapping::idByContact(const Contact &contact, bool create)
 
 const QMap<int, Contact> & SqlContactsMapping::mapping() const
 {
+	QMutexLocker locker(&Mutex);
+
 	return ContactMapping;
 }
 
